force-app/main/default/objects/Script__c/fields/Post_production_Days__c.field-meta.xml
<CustomField>
    <fullName>Post_production_Days__c</fullName>
    <label>Post-production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>