force-app/main/default/objects/Script__c/fields/Pre_production_Days__c.field-meta.xml
<CustomField>
    <fullName>Pre_production_Days__c</fullName>
    <label>Pre-production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>