force-app/main/default/objects/Script__c/fields/Production_Days__c.field-meta.xml
<CustomField>
    <fullName>Production_Days__c</fullName>
    <label>Production Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>