force-app/main/default/objects/Script__c/listViews/Recently_Viewed.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>Title__c</columns>
    <filterScope>Mine</filterScope>
    <label>Recently Viewed</label>
</ListView>